--- a/bootstrap.html
+++ b/bootstrap.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     footer {
       background-color: #777;
@@ -133,9 +134,8 @@
         </div>
       </div>
     </div>
+
     
-
-
     <!-- Bootstrap CSS -->
 
     <!-- Optional JavaScript -->
