--- a/bootstrap.html
+++ b/bootstrap.html
@@ -116,7 +116,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> <br>
 
     <div class="container">
       <div class="row">
@@ -130,7 +130,17 @@
           </ul>
         </div>
         <div class="col-8">
-          
+          <div class="row">
+            <div class="column">
+              <img src="1/biru.jpg" height="150px" onclick="myFunction(this);">
+            </div>
+            <div class="column">
+              <img src="1/glory.jpg" height="150px" onclick="myFunction(this);">
+            </div>
+            <div class="column">
+              <img src="1/tulip (2).jpg" height="150px" onclick="myFunction(this);">
+            </div>
+          </div>
         </div>
       </div>
     </div>
